--- a/index.html
+++ b/index.html
@@ -3,13 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>National Parks</title>
+    <title>JavaScript on your page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="banner">
       <h1>National Parks</h1>
     </header>
+    <div class="input-form">
+      <h2>Add a new park</h2>
+      <form action="" id="park-form" novalidate>
+        <div id="name-form">
+          <label for="name-input">Name</label>
+          <input
+            type="text"
+            name="name"
+            id="name-input"
+            title="Park name"
+          />
+          <div class="error" id="name-error">Please enter a name</div>
+        </div>
+        <div id="location-form">
+          <label for="location-input">Location</label>
+          <input
+            type="text"
+            name="location"
+            id="location-input"
+            title="Park location"
+          />
+          <div class="error" id="location-error">Please enter a location</div>
+        </div>
+        <div id="description-form">
+          <label for="description-input">Description</label>
+          <textarea name="description" id="description-input"></textarea>
+          <div class="error" id="description-error">
+            Please enter a short description
+          </div>
+        </div>
+        <div id="established-form">
+          <label for="established-input">Established</label>
+          <input
+            type="text"
+            name="established"
+            id="established-input"
+            title="Established"
+          />
+          <div class="error" id="established-error">Please enter a date</div>
+        </div>
+        <div id="area-form">
+          <label for="area-input">Area</label>
+          <input
+            type="text"
+            name="area"
+            id="area-input"
+            title="Area"
+          />
+          <div class="error" id="area-error">Please enter the area</div>
+        </div>
+        <div id="rating-form">
+          <label for="rating-input">Rating</label>
+          <input
+            type="number"
+            min="1"
+            max="5"
+            name="rating"
+            id="rating-input"
+            title="rating"
+          />
+          <div class="error" id="rating-error">
+            Please enter the rating between 1 and 5 inclusive.
+          </div>
+        </div>
+        <div class="form-control">
+          <button type="submit" id="add-button">Add</button>
+        </div>
+      </form>
+    </div>
     <main>
       <section class="park-display">
         <h2>Biscayne National Park</h2>
@@ -27,21 +96,15 @@
         <div class="stats">
           <div class="established-display stat">
             <h3>Established</h3>
-            <div class="value">
-              June 28, 1980
-            </div>
+            <div class="value">June 28, 1980</div>
           </div>
           <div class="area-display stat">
             <h3>Area</h3>
-            <div class="value">
-              172,971 acres (699.99 km<sup>2</sup>)
-            </div>
+            <div class="value">172,971 acres (699.99 km<sup>2</sup>)</div>
           </div>
           <div class="rating-display stat">
             <h3>Rating</h3>
-            <div class="value">
-              4.7
-            </div>
+            <div class="value">4.7</div>
           </div>
         </div>
       </section>
@@ -61,9 +124,7 @@
         <div class="stats">
           <div class="established-display stat">
             <h3>Established</h3>
-            <div class="value">
-              February 26, 1919
-            </div>
+            <div class="value">February 26, 1919</div>
           </div>
           <div class="area-display stat">
             <h3>Area</h3>
@@ -71,9 +132,7 @@
           </div>
           <div class="rating-display stat">
             <h3>Rating</h3>
-            <div class="value">
-              4.8
-            </div>
+            <div class="value">4.8</div>
           </div>
         </div>
       </section>
@@ -91,9 +150,7 @@
         <div class="stats">
           <div class="established-display stat">
             <h3>Established</h3>
-            <div class="value">
-              February 22, 2018
-            </div>
+            <div class="value">February 22, 2018</div>
           </div>
           <div class="area-display stat">
             <h3>Area</h3>
@@ -101,9 +158,7 @@
           </div>
           <div class="rating-display stat">
             <h3>Rating</h3>
-            <div class="value">
-              4.7
-            </div>
+            <div class="value">4.7</div>
           </div>
         </div>
       </section>
@@ -122,9 +177,7 @@
         <div class="stats">
           <div class="established-display stat">
             <h3>Established</h3>
-            <div class="value">
-              February 15, 2019
-            </div>
+            <div class="value">February 15, 2019</div>
           </div>
           <div class="area-display stat">
             <h3>Area</h3>
@@ -132,9 +185,7 @@
           </div>
           <div class="rating-display stat">
             <h3>Rating</h3>
-            <div class="value">
-              4.6
-            </div>
+            <div class="value">4.6</div>
           </div>
         </div>
       </section>
